# larrecodnn

./: CMakeLists.txt  CMakePresets.json
larrecodnn/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/: CMakeLists.txt  keras_model.h
larrecodnn/ImagePatternAlgs/Keras/Tools/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Modules/: CMakeLists.txt  CheckCNNScore_module.cc  EmTrack.h  EmTrackClusterId2outTl_module.cc  EmTrackClusterId3outTl_module.cc  EmTrackMichelIdTl_module.cc  EvaluateROIEff_module.cc  PointIdEffTest_module.cc  RawWaveformClnSigDump_module.cc  RawWaveformDump_module.cc  WaveformRoiFinder_module.cc  WireClusterFinder_module.cc  waveformroifinder.fcl  wireclusterfinder.fcl
larrecodnn/ImagePatternAlgs/NuSonic/Triton/: CMakeLists.txt  TritonClient.cc  TritonClient.h  TritonData.cc  TritonData.h  triton_utils.cc  triton_utils.h
larrecodnn/ImagePatternAlgs/Tensorflow/: CMakeLists.txt  quiet_session.h
larrecodnn/ImagePatternAlgs/Tensorflow/Modules/: CMakeLists.txt  EmTrackClusterId2out_module.cc  EmTrackClusterId3out_module.cc  EmTrackMichelId_module.cc  ParticleDecayId_module.cc  PointIdTrainingData_module.cc
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/: CMakeLists.txt  PointIdAlg.cxx  PointIdAlg.h
larrecodnn/ImagePatternAlgs/Tensorflow/TF/: CMakeLists.txt  tf_graph.cc  tf_graph.h
larrecodnn/ImagePatternAlgs/Tensorflow/Tools/: CMakeLists.txt  WaveformRecogTf_tool.cc
larrecodnn/ImagePatternAlgs/ToolInterfaces/: CMakeLists.txt  IPointIdAlg.h  IWaveformRecog.h
larrecodnn/ImagePatternAlgs/Triton/Tools/: CMakeLists.txt  PointIdAlgSonicTriton_tool.cc  PointIdAlgTriton_tool.cc
ups/: product_deps  setup_for_development
